--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -1,131 +1,203 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_bold"
-        android:text="Give Feedback"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        tools:ignore="HardcodedText" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_regular"
-        android:text="What do you think of our Birds Species Classification app?"
-        tools:ignore="HardcodedText" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+    <LinearLayout
+        android:id="@+id/rootLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:cardCornerRadius="20dp"
-        android:background="@drawable/rounded_search_background"
-        app:cardElevation="4dp"
-        app:cardUseCompatPadding="true">
+        android:orientation="vertical"
+        android:padding="16dp">
 
-        <LinearLayout
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_bold"
+            android:text="Give Feedback"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_regular"
+            android:text="What do you think of our Birds Species Classification app?"
+            tools:ignore="HardcodedText" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_margin="10dp"
-            android:gravity="center">
+            android:layout_margin="16dp"
+            app:cardCornerRadius="20dp"
+            android:background="@drawable/rounded_search_background"
+            app:cardElevation="4dp"
+            app:cardUseCompatPadding="true">
 
-            <ImageView
-                android:id="@+id/emoji1"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:layout_margin="10dp"
-                android:src="@drawable/angry" />
+                android:gravity="center">
 
-            <ImageView
-                android:id="@+id/emoji2"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/bad_angry"
-                android:layout_margin="10dp"/>
+                <ImageView
+                    android:id="@+id/emoji1"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/angry" />
 
-            <ImageView
-                android:id="@+id/emoji3"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/neutral"
-                android:layout_margin="10dp"/>
+                <ImageView
+                    android:id="@+id/emoji2"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/bad_angry"
+                    android:layout_margin="10dp"/>
 
-            <ImageView
-                android:id="@+id/emoji4"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/happy"
-                android:layout_margin="10dp"/>
+                <ImageView
+                    android:id="@+id/emoji3"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/neutral"
+                    android:layout_margin="10dp"/>
 
-            <ImageView
-                android:id="@+id/emoji5"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/best_happy"
-                android:layout_margin="10dp"/>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/emoji4"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/happy"
+                    android:layout_margin="10dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/poppins_regular"
-        android:text="We would like your thoughts on our app"
-        tools:ignore="HardcodedText" />
+                <ImageView
+                    android:id="@+id/emoji5"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/best_happy"
+                    android:layout_margin="10dp"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-    <EditText
-        android:id="@+id/feedbackEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter your feedback here"
-        android:lines="4"
-        tools:ignore="HardcodedText" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_regular"
-        android:text="May we follow up with you for the issue you are facing?"
-        tools:ignore="HardcodedText" />
-
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-        <RadioButton
-            android:id="@+id/radioButtonYes"
-            android:padding="10dp"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Yes" />
-        <RadioButton
-            android:id="@+id/radioButtonNo"
-            android:padding="10dp"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/poppins_regular"
+            android:text="We would like your thoughts on our app"
+            tools:ignore="HardcodedText" />
+
+        <EditText
+            android:id="@+id/feedbackEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter your feedback here"
+            android:lines="4"
+            tools:ignore="HardcodedText" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_margin="16dp"
+            app:cardCornerRadius="20dp">
+
+            <!-- Image upload button -->
+            <ImageView
+                android:id="@+id/image_upload_feedback_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/ic_upload" />
+
+            <!-- Text view to display file name -->
+            <TextView
+                android:id="@+id/file_name_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/image_upload_button"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="No file chosen"
+                android:layout_centerVertical="true" />
+
+
+        </androidx.cardview.widget.CardView>
+
+        <RelativeLayout
+            android:id="@+id/emailLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center"
+            android:background="@drawable/rounded_search_background"
+            android:visibility="gone">
+
+            <!-- Email TextView -->
+            <TextView
+                android:id="@+id/emailTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Enter your email:"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/poppins_regular" />
+
+            <!-- Email EditText -->
+            <EditText
+                android:id="@+id/emailEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Your email address"
+                android:inputType="textEmailAddress"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/emailTextView"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="20dp" />
+
+        </RelativeLayout>
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No" />
-    </RadioGroup>
+            android:fontFamily="@font/poppins_regular"
+            android:text="May we follow up with you for the issue you are facing?"
+            tools:ignore="HardcodedText" />
 
-    <Button
-        android:id="@+id/submitButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_gravity="center"
-        android:background="@drawable/rounded_search_background"
-        android:text="Submit" />
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
 
-</LinearLayout>
+            <RadioButton
+                android:id="@+id/radioButtonYes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yes" />
+
+            <RadioButton
+                android:id="@+id/radioButtonNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No" />
+
+        </RadioGroup>
+
+        <Button
+            android:id="@+id/submitButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:text="Submit" />
+
+    </LinearLayout>
+</ScrollView>
