--- a/app/src/main/res/layout-v28/fragment_home.xml
+++ b/app/src/main/res/layout-v28/fragment_home.xml
@@ -108,7 +108,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="60dp"
+                android:layout_marginBottom="20dp"
                 android:padding="10dp">
                 <TextView
                     android:layout_width="wrap_content"
@@ -323,6 +323,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginBottom="60dp"
+                android:layout_marginTop="0dp"
                 android:padding="10dp">
                 <TextView
                     android:layout_width="wrap_content"
