--- a/app/src/main/res/layout-v28/fragment_home.xml
+++ b/app/src/main/res/layout-v28/fragment_home.xml
@@ -541,8 +541,8 @@
                         <androidx.cardview.widget.CardView
                             android:layout_width="0dp"
                             android:layout_height="220dp"
-                            android:layout_weight="1"
                             android:layout_margin="10dp"
+                            android:layout_weight="1"
                             app:cardCornerRadius="20dp"
                             app:cardElevation="4dp">
 
@@ -555,8 +555,8 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
-                                    android:src="@drawable/bald_eagle"
-                                    android:scaleType="centerCrop" />
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/bald_eagle" />
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
@@ -583,8 +583,8 @@
                         <androidx.cardview.widget.CardView
                             android:layout_width="0dp"
                             android:layout_height="220dp"
-                            android:layout_weight="1"
                             android:layout_margin="10dp"
+                            android:layout_weight="1"
                             app:cardCornerRadius="20dp"
                             app:cardElevation="4dp">
 
@@ -622,7 +622,9 @@
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
 
+
                     </LinearLayout>
+
                 </LinearLayout>
 
 
