--- a/app/src/main/res/layout-v28/fragment_home.xml
+++ b/app/src/main/res/layout-v28/fragment_home.xml
@@ -606,13 +606,23 @@
 
                     </LinearLayout>
                 </LinearLayout>
-                <Spinner
-                    android:id="@+id/spinner"
-                    android:padding="10dp"
-                    android:layout_margin="10dp"
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/new_card5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:rotationX="-16" />
+                    android:layout_marginTop="16dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="4dp"
+                    app:layout_constraintTop_toBottomOf="@id/new_card4">
+                    <Spinner
+                        android:id="@+id/spinner"
+                        android:padding="10dp"
+                        android:layout_margin="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:rotationX="-16" />                </androidx.cardview.widget.CardView>
+
             </LinearLayout>
 
 
